# json_codegen-rs

./: .gitignore  Cargo.toml
src/: config.rs  generator.rs  lib.rs  types.rs
