[package]
name = "json_codegen"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]

[lib]
name = "json_codegen"
path = "src/lib.rs"

[[bin]]
name = "json-api-codegen"
path = "src/bin/main.rs"

[dependencies]
serde_json = "1.0.9"
reqwest = "0.8.4"
log = "0.4.1"
ordermap = "0.4.0"
serde = "1.0.27"
serde_derive = "1.0.27"
toml = "0.4.5"
failure = "0.1.1"
syn = "0.12.12"
quote = "0.4.2"
pretty_env_logger = "0.2.2"
rustfmt = "0.10.0"
regex = "0.2.6"
url = "1.6.0"
url_serde = "0.2.0"
